chore: update 3.8.9